[package]
name = "tree_walker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tree_walker"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
